<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_register"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <EditText
            android:id="@+id/editName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/input_register_bg"
            android:hint="@string/hint_name"
            android:padding="10dp"
            android:singleLine="true"
            android:inputType="textEmailAddress"
            android:textColor="@color/bg_screen1"
            android:textColorHint="@color/input_register_hint" />

        <EditText
            android:id="@+id/editSurname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/input_register_bg"
            android:hint="@string/hint_surname"
            android:padding="10dp"
            android:singleLine="true"
            android:inputType="textEmailAddress"
            android:textColor="@color/bg_screen1"
            android:textColorHint="@color/input_register_hint" />

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/input_register_bg"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/bg_screen1"
            android:textColorHint="@color/input_register_hint" />

        <EditText
            android:id="@+id/editHouseNo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/input_register_bg"
            android:hint="@string/hint_houseno"
            android:padding="10dp"
            android:singleLine="true"
            android:inputType="textEmailAddress"
            android:textColor="@color/bg_screen1"
            android:textColorHint="@color/input_register_hint" />
        <EditText
            android:id="@+id/editStreetName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/input_register_bg"
            android:hint="@string/hint_streetName"
            android:padding="10dp"
            android:singleLine="true"
            android:inputType="textEmailAddress"
            android:textColor="@color/bg_screen1"
            android:textColorHint="@color/input_register_hint" />

        <EditText
            android:id="@+id/editSuburb"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/input_register_bg"
            android:hint="@string/hint_suburb"
            android:padding="10dp"
            android:singleLine="true"
            android:inputType="textEmailAddress"
            android:textColor="@color/bg_screen1"
            android:textColorHint="@color/input_register_hint" />

        <EditText
            android:id="@+id/editCity"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/input_register_bg"
            android:hint="@string/hint_city"
            android:padding="10dp"
            android:singleLine="true"
            android:inputType="textEmailAddress"
            android:textColor="@color/bg_screen1"
            android:textColorHint="@color/input_register_hint" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="@dimen/desc_padding"
            android:paddingRight="@dimen/desc_padding"
            android:text="Phone Type : "
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/slide_desc" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="@dimen/desc_padding"
            android:paddingRight="@dimen/desc_padding"
            android:text="Phone Price :"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/slide_desc" />

        <Button
            android:id="@+id/btnBuy"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="#ea4c88"
            android:text="@string/btn_Buy"
            android:textColor="@color/white" />


    </LinearLayout>


</LinearLayout>